tests/paczka1/fuzzy1/66657808.err
Error in line 6: WrxlUtrsmh S153 22,6
Error in line 3: cncKz S984 92,5
Error in line 14: WrxlUtrsmh S153 83,83
Error in line 16: oXr6y S892 50,6
Error in line 17: WrxlUtrsmh S153 229,1
Error in line 30: cncKz S191 91,3
